--- a/CppNet10/EasyTcpClient/EasyTcpClient.vcxproj
+++ b/CppNet10/EasyTcpClient/EasyTcpClient.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Client.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CELLTimestamp.hpp" />
     <ClInclude Include="EasyTcpClient.hpp" />
     <ClInclude Include="MessageHeader.hpp" />
   </ItemGroup>
