--- a/CppNet10/EasyTcpServer/EasyTcpServer.vcxproj
+++ b/CppNet10/EasyTcpServer/EasyTcpServer.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="Server.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CELLTimestamp.hpp" />
     <ClInclude Include="EasyTcpServer.hpp" />
     <ClInclude Include="MessageHeader.hpp" />
   </ItemGroup>
